Add scratch code from 4/7 lecture.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,45 @@
 
     <h3>This is a subsection</h3>
     <h4>This is a subsubsection</h4>
-    <h1>This is a second title of the page</h1>
+
+    <h2>Here's an unordered list</h2>
+    <ul>
+      <li>Here's an item</li>
+      <li>Here's another list item</li>
+      <li>Here's a nested list
+        <ul>
+          <li>Here's a subitem</li>
+          <li>Here's another subitem</li>
+        </ul>
+      </li>
+      <ol>
+        <li>Here's a first subitem</li>
+      </ol>
+    </ul>
+
+    <h2>Here's an ordered list</h2>
+    <ol>
+      <li>Here's my first item</li>
+      <li>Here's my second item</li>
+      <li>Here's my third item (a nested list)
+        <ul>
+          <li>Here's a first subitem</li>
+        </ul>
+      </li>
+    </ol>
+
+    <h2>Emphasizing text</h2>
+    <p>
+      <em>This is some text I want emphasized.</em><br/>
+      <strong>This is some text I want strongly emphasized.</strong><br/>
+      <em><strong>This is some text I want really strongly emphasized.</strong></em>
+    </p>
+
+    <h2>Talking about links</h2>
+    <p>
+      <a href="http://google.com" target="_blank">This is a link to Google.</a><br/>
+      <a href="stuff/stuff.html">This is a link to my stuff page</a>
+    </p>
 
   </body>
 
