Add scratch code from 4/10 lecture.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <a href="stuff/stuff.html">This is a link to my stuff page</a>
     </p>
 
+    <h2>Images!</h2>
+    <p>
+      <a href="http://placekitten.com/480/320"><img src="http://placekitten.com/480/320" /></a> <p>Here's the first text.</p>
+      <img src="320.jpeg" /> <p>Here's some text.</p>
+    </p>
+
   </body>
 
 </html>
